src/objects/Campaign_Project_Blackout__c.object
<CustomObject>
    <description>Campaign project blackout dates and times</description>
    <fields>
        <fullName>Blackout_Date__c</fullName>
        <label>Blackout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blackout_End_Hour__c</fullName>
        <globalPicklist>Hour</globalPicklist>
        <label>Blackout End Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blackout_End_Minute__c</fullName>
        <label>Blackout End Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blackout_Start_Hour__c</fullName>
        <globalPicklist>Hour</globalPicklist>
        <label>Blackout Start Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blackout_Start_Minute__c</fullName>
        <label>Blackout Start Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Project__c</fullName>
        <description>Campaign Project</description>
        <inlineHelpText>Campaign Project</inlineHelpText>
        <label>Campaign Project</label>
        <referenceTo>Campaign_Project__c</referenceTo>
        <relationshipLabel>Campaign Project Blackout</relationshipLabel>
        <relationshipName>Campaign_Project_Blackout</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Campaign Project Blackout</label>
    <nameField>
        <displayFormat>CPB-{0000000000}</displayFormat>
        <label>Campaign Project Blackout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Project Blackout</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>